package edu.hitsz.aircraft;

public class CreatBossEnemy implements EnemyAircraftFactory{
    @Override
    public EnemyAircraftProduct creatEnemyProduct() {
        return null;
    }
}
