package edu.hitsz.aircraft;

public interface EnemyAircraftFactory {
    public EnemyAircraftProduct creatEnemyProduct();
}
