@startuml
'https://plantuml.com/class-diagram

interface EnemyAircraftFactory{
    + creatEnemyProduct():EnemyAircraftProduct
}

interface EnemyAircraftProduct{
    + createEliteEnemy():EliteEnemy
    + createMobEnemy():MobEnemy
    + createBossEnemy():BossEnemy
}

EnemyAircraftProduct <|.. EliteEnemyProduct
EnemyAircraftProduct <|.. MobEnemyProduct
EnemyAircraftProduct <|.. BossEnemyProduct

EnemyAircraftFactory <|.. CreatEliteEnemy
EnemyAircraftFactory <|.. CreatMobEnemy
EnemyAircraftFactory <|.. CreatBossEnemy

CreatMobEnemy <.. MobEnemyProduct
CreatEliteEnemy <.. EliteEnemyProduct
CreatBossEnemy <.. BossEnemyProduct

class CreatEliteEnemy{
    + creatEnemyProduct():EnemyAircraftProduct
}

class CreatMobEnemy{
    + creatEnemyProduct():EnemyAircraftProduct
}

class CreatBossEnemy{
    + creatEnemyProduct():EnemyAircraftProduct
}

class MobEnemyProduct {
    + creatMobEnemy():MobEnemy
    + createEliteEnemy():EliteEnemy
    + createBossEnemy():BossEnemy
}

class EliteEnemyProduct {
    + createEliteEnemy():EliteEnemy
    + createMobEnemy():MobEnemy
    + createBossEnemy():BossEnemy
}

class BossEnemyProduct{
    + createEliteEnemy():EliteEnemy
    + createMobEnemy():MobEnemy
    + createBossEnemy():BossEnemy
}

@enduml